<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"

    android:orientation="vertical"
    android:background="@color/bgBlack"


    >

    <TextView
        android:id="@+id/tvText"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/bgBlack"
        android:text="@string/tvText"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        android:gravity="end|bottom"
        android:padding="10dp"


        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"

        >

        <Button
            android:id="@+id/idSeven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/_7"
            android:textSize="25sp"
            android:textStyle="bold"
            android:onClick="onClick"


            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/idEight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/_8"
            android:textSize="25sp"
            android:textStyle="bold"
            android:onClick="onClick"


            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/idNine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/_9"
            android:textSize="25sp"
            android:textStyle="bold"
            android:onClick="onClick"


            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/idDivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/divide"
            android:textSize="25sp"
            android:textStyle="bold"
            android:onClick="onOperator"


            tools:ignore="UsingOnClickInXml" />


    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"

        >

        <Button
            android:id="@+id/idFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/_4"
            android:textSize="25sp"
            android:textStyle="bold"
            android:onClick="onClick"


            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/idFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/_5"
            android:textSize="25sp"
            android:textStyle="bold"
            android:onClick="onClick"


            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/idSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/_6"
            android:textSize="25sp"
            android:textStyle="bold"
            android:onClick="onClick"


            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/idMultiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/multiply"
            android:textSize="25sp"
            android:textStyle="bold"
            android:onClick="onOperator"


            tools:ignore="UsingOnClickInXml" />


    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"

        >

        <Button
            android:id="@+id/idOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/_1"
            android:textSize="25sp"
            android:textStyle="bold"
            android:onClick="onClick"


            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/idTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/_2"
            android:textSize="25sp"
            android:textStyle="bold"
            android:onClick="onClick"


            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/idThree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/_3"
            android:textSize="25sp"
            android:textStyle="bold"
            android:onClick="onClick"


            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/idSubtract"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/minus"
            android:textSize="25sp"
            android:textStyle="bold"
            android:onClick="onOperator"


            tools:ignore="UsingOnClickInXml" />


    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"

        >

        <Button
            android:id="@+id/idClr"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/clr"
            android:textSize="25sp"
            android:textStyle="bold"
            android:onClick="onClr"


            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/idZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/_0"
            android:textSize="25sp"
            android:textStyle="bold"
            android:onClick="onClick"


            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/idDot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/dot"
            android:textSize="25sp"
            android:textStyle="bold"
            android:onClick="onDecimalPoint"


            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/idAdd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/plus"
            android:textSize="25sp"
            android:textStyle="bold"
            android:onClick="onOperator"


            tools:ignore="UsingOnClickInXml" />


    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"

        >

        <Button
            android:id="@+id/idEquals"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="4"
            android:text="@string/equals"
            android:textSize="25sp"
            android:textStyle="bold"
            android:onClick="onEquals"


            tools:ignore="UsingOnClickInXml" />




    </LinearLayout>





</LinearLayout>